<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="@dimen/knowledge_card_width"
    android:layout_height="@dimen/knowledge_card_height"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical">

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginRight="@dimen/calendar_card_padding"
        android:background="@android:color/white"
        app:cardElevation="0dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/knowledge_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/knowledge_card_padding"
                android:layout_marginRight="@dimen/knowledge_card_padding"
                android:ellipsize="marquee"
                android:singleLine="true"
                android:text="@string/knowledge_title"
                android:textSize="@dimen/knowledge_title_text_size"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/knowledge_category"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/knowledge_card_padding"
                android:layout_marginRight="@dimen/knowledge_card_padding"
                android:ellipsize="marquee"
                android:singleLine="true"
                android:text="@string/knowledge_category"
                android:textColor="@color/see_all"
                android:textSize="@dimen/knowledge_category_text_size" />

            <ImageView
                android:id="@+id/knowledge_thumbnail"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginTop="@dimen/knowledge_element_margin"
                android:layout_weight="1"
                android:scaleType="fitXY"
                android:src="@android:drawable/picture_frame" />

            <TextView
                android:id="@+id/knowledge_description"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/knowledge_card_padding"
                android:layout_marginRight="@dimen/knowledge_card_padding"
                android:layout_marginTop="@dimen/knowledge_element_margin"
                android:ellipsize="end"
                android:maxLines="2"
                android:text="@string/evaluation_form_intro"
                android:textSize="@dimen/knowledge_description_text_size" />

        </LinearLayout>

    </android.support.v7.widget.CardView>

</LinearLayout>